# CortexaAI

./: .coverage  .dockerignore  .env.example  .gitignore  .koyeb.yaml  .markdownlint.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.railway  KOYEB_DEPLOYMENT.md  LICENSE  PREFLIGHT_CHECKLIST.md  README.md  WARP.md  benchmark_report.json  cleanup.py  cleanup_report.json  docker-compose.yml  final_validation.py  fly.toml  langgraph.json  langgraph_benchmark_report.json  phase1_activation_report.json  phase2_activation.py  phase2_activation_report.json  production_activation.py  pyproject.toml  railway.json  render.yaml  requirements.txt  start_backend.ps1  system_activation.py  test_cache_fix.py  test_classifier.py  test_fixes.py  test_langgraph_studio.py  test_prompt_management.py  (+3 more)
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agents/: __init__.py  base_expert.py  classifier.py  coordinator.py  evaluator.py  exceptions.py  langgraph_expert.py  utils.py
agents/memory/: __init__.py  memory_manager.py
agents/planning/: __init__.py  planning_engine.py
agents/prompt/: __init__.py  analytics_engine.py  deployment_manager.py  experiment_manager.py  prompt_generator.py  prompt_management_system.py  prompt_models.py  prompt_registry.py  template_manager.py  version_manager.py
config/: __init__.py  config.py  key_store.py  llm_providers.py
core/: __init__.py  auth.py  batch.py  complexity.py  database.py  error_recovery.py  finetuning.py  language.py  marketplace.py  optimization.py  plugins.py  prompt_builder.py  regression.py  similarity.py  streaming.py  templates.py  webhooks.py
data/: learned_domains.json
data/prompts/: performance.json  prompts.json  versions.json
docker/: Dockerfile  docker-compose.yml
docs/: ALTERNATIVE_DEPLOYMENTS.md  ARCHITECTURE.md  FEATURE_ANALYSIS.md  PREFLIGHT_CHECKLIST.md  PROMPT_SYSTEM_ENHANCEMENT.md  RAILWAY_DEPLOYMENT.md  cache_fix_documentation.md
examples/: advanced_integration.py  basic_usage.py  hybrid_integration_demo.py
frontend/: index.html
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-react/src/: App.tsx  index.css  vite-env.d.ts
frontend-react/src/api/: client.ts
frontend-react/src/components/layout/: AppLayout.tsx  Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
frontend-react/src/components/ui/: badge.tsx  card.tsx  confirmation-dialog.tsx  dialog.tsx  label.tsx  loading.tsx  notifications.tsx  progress.tsx
frontend-react/src/hooks/: useApi.ts  useNotifications.ts
frontend-react/src/lib/: utils.ts
frontend-react/src/pages/: Analytics.tsx  Dashboard.tsx  Domains.tsx  Experiments.tsx  PromptProcessor.tsx  Prompts.tsx  Settings.tsx  SystemHealth.tsx  Templates.tsx  Workflows.tsx
frontend-react/src/types/: api.ts
frontend-react/src/utils/: index.ts
scripts/: performance_benchmark.py  reset_data.py  run_langgraph_studio.py
src/: __init__.py  deps.py  main.py  workflow.py
src/routes/: __init__.py  features.py  prompts.py  system.py  workflows.py
templates/: templates.json
tests/: __init__.py  conftest.py  test_agents.py  test_classifier.py  test_features.py  test_llm_providers.py  test_main.py  test_optimization.py  test_system.py
tools/: langgraph_performance_benchmark.py  performance_benchmark.py  run_langgraph_studio.py
